oke/apps/paulojauregui-com/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paulojauregui-com # The name of your namespace
  labels: # Optional: Labels for organization/selection
    app.kubernetes.io/name: paulojauregui-com
    app.kubernetes.io/instance: paulojauregui-com
